@@ -694,6 +694,17 @@ IceProxy::Ice::Object::__handleException(const LocalException& ex, int& cnt)
 	ir->getLocatorInfo()->clearObjectCache(ir);
     }
 
+    if(ice_isBatchOneway() || ice_isBatchDatagram())
+    {
+	//
+	// We do not retry batch requests (except for problems during
+	// connection establishment, which are not handled here
+	// anyway). If we retry a batch request, previous requests
+	// from the same batch are silently thrown away.
+	//
+        ex.ice_throw();
+    }
+
     ProxyFactoryPtr proxyFactory = _reference->getInstance()->proxyFactory();
     if(proxyFactory)
     {
@@ -701,7 +712,10 @@ IceProxy::Ice::Object::__handleException(const LocalException& ex, int& cnt)
     }
     else
     {
-        ex.ice_throw(); // The communicator is already destroyed, so we cannot retry.
+	//
+	// The communicator is already destroyed, so we cannot retry.
+	//
+        ex.ice_throw();
     }
 }
 
